# python-anyconfig-msgpack-backend

./: .travis.yml  MANIFEST.in  NEWS  README.rst  azure-pipelines.yml  requirements.txt  setup.cfg  setup.py  tox.ini
anyconfig_msgpack_backend/: __init__.py  msgpack.py
pkg/: entry_points.txt  nose.cfg  package.spec.in  requirements.txt  test_requirements.txt
src/anyconfig_msgpack_backend/: __init__.py  msgpack_.py
tests/: 0.msgpack  common.py  msgpack.py  msgpack_.py  plugin.py  test_msgpack.py  test_plugin.py
