# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean sdist bdist_wheel

[metadata]
name = anyconfig-msgpack-backend
# version = attr: anyconfig_msgpack_backend.__version__
description = Backend module for python-anyconfig to load and dump MessagePack data
long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/python-anyconfig-msgpack-backend
project_urls =
    CI: Travis = https://travis-ci.org/ssato/python-anyconfig-msgpack-backend
    Download = https://pypi.org/project/anyconfig-msgpack-backend/
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/python-anyconfig/
    Bug Tracker = https://github.com/ssato/python-anyconfig-msgpack-backend/issues
    Source = https://github.com/ssato/python-anyconfig-msgpack-backend
platforms =
    any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    anyconfig
    msgpack

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
anyconfig_backends =
    msgpack = anyconfig_msgpack_backend:Parser

# vim:sw=4:ts=4:et:
